--- a/evenements.html
+++ b/evenements.html
@@ -28,6 +28,13 @@
       >
     </header>
 
+    <div class="events">
+      <img src="events/event1.jpg" alt="" />
+      <img src="events/event2.jpg" alt="" />
+      <img src="events/event3.jpg" alt="" />
+      <img src="events/event4.jpg" alt="" />
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
