--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
           <h1>Bienvenue à la Brasserie,<br />Une expérience unique</h1>
         </div>
 
-        <p class="home-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis
-          ipsum sed u urna sagittis maximus ut nec velit. Mauris
-        </p>
+        <p class="home-description"></p>
 
         <div class="home-left-buttons">
           <a
