--- a/evenements.html
+++ b/evenements.html
@@ -28,6 +28,15 @@
       >
     </header>
 
+    <section class="titre-page">
+      <h1>Nos Événements</h1>
+      <div class="ligne-soustitre"></div>
+    </section>
+
+    <section class="contact-intro">
+      <h2 class="titre-deco">Nos Événements</h2>
+    </section>
+
     <div class="events">
       <img src="events/event1.jpg" alt="" />
       <img src="events/event2.jpg" alt="" />
